# Clab-api-old

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/audio/: 240604212847_wnsdyd54.webm
app/database/: db_connection.py  query.py
app/routers/: audio.py  stt.py  users.py
app/routers/clovaapi/: clova_function.py
app/services/: api.py  gen_wordcloud.py  stt.py
db/data/postgresql/base/13757/: pg_internal.init
db/data/postgresql/base/16384/: 1247  1249  1255  1259  16393  16398  16399  16401  16402  16408  16409  16415  16421  16427  16432  16437  16482  16488  2224  2579  2604  2606  2608  2609  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+20 more)
db/data/postgresql/global/: 1260  pg_control  pg_internal.init
db/data/postgresql/pg_stat/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
db/data/postgresql/pg_xact/: 0000
