[tool.poetry]
name = "connectslab_api"
version = "0.1.0"
description = ""
authors = ["juyony <wnsdyd1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
fastapi = {extras = ["all"], version = "^0.110.1"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
requests = "^2.31.0"
wordcloud = "^1.9.3"
konlpy = "^0.6.0"
mecab-ko = "^1.0.1"
seaborn = "^0.13.2"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
debugpy = "^1.8.1"
pillow = "^10.3.0"
boto3 = "^1.34.113"
urllib3 = ">=1.25.4,<2.0.0"
supabase = "^2.5.0"

[tool.poetry.group.dev.dependenc]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
